content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/multiteam_hero_select_overlay.css
.HeroSelectOverlayRoot
{
	width: 100%;
	height: 190px;
	margin-top: 10px;
   
}

.HeroSelectTeamRowsContainer
{
	width: 80%;
	height: 100%;
	flow-children: down;
	horizontal-align: center;
}

#HeroSelectTeamsContainer,
#HeroSelectTeamsContainer2
{
	width: 100%;
	flow-children: right;
	margin-bottom: 4px;
}

#Mutations
{
	width: 70%;
    flow-children: right;
    horizontal-align: center;
	visibility: collapse;
}

.HeroSelectOverlayTimer
{
	vertical-align: center;
	margin-left: 200px;
	margin-bottom: 75px;
}

.AspectRatio4x3 .HeroSelectOverlayTimer
{
	margin-left: 50px;
}

#PhaseInstructions > Label
{
	visibility: collapse;
	font-size: 25px;
	color: #CCCCCC;
	vertical-align: center;
	text-align: center;
	width: 300px;
	margin-left: 85px;
	margin-top: 115px;
	text-transform: uppercase;	
}


.AspectRatio4x3 #PhaseInstructions > Label
{
	margin-left: -65px;
}

#PhaseInstructions > Label.Visible
{
	visibility:visible;
}

#Timer
{
	font-size: 48px;
	color: #CCCCCC;
	horizontal-align: left;
	vertical-align: center;
	width: 100%;
	text-align: center;
	margin-left: 3px;
	margin-right: 3px;
	margin-top: 5px;
}

#TimerBg
{
	wash-color: #222222;
	vertical-align: center;
	horizontal-align: center;
}

#TimerBg,
#TimerRing
{
	width: 70px;
	height: 70px;

}

#TimerLabel
{
	visibility: collapse;
	color: #a9aaaa;
	font-size: 16px;
	text-transform: uppercase;
	
}

.HeroSelectTeamRoot
{
	margin-left: 9px;
	margin-right: 9px;
}

.HeroSelectTeamRoot.no_players
{
	visibility: collapse;
}

#PlayersContainer
{
	horizontal-align: center;
	flow-children: right;
	height: 70px;
}

.local_player_team #PlayerPortraitsOverlay
{
	width: 100%;
	height: 50px;
	box-shadow: fill #ffffff80 -3px -3px 3px 6px;
}

#EndSpacer
{
	width: fill-parent-flow(1);
}

#Spacer
{
}

.HeroSelectPlayerRoot
{
	flow-children: down;
}

#TeamHeader
{
	width: 100%;
	height: 52px;
}

#TeamHeaderAndPlayers
{
	horizontal-align: center;
}

#TeamHeaderLogoName
{
	width: 100%;
	flow-children: down;
}

#TeamGradient
{
	width: 100%;
	height: 24px;
	vertical-align: bottom;
	margin-bottom: -5px;
}

#TeamLogo
{
	vertical-align: top;
	margin-top: 2px;
	horizontal-align: center;
}

#PlayerPortrait
{
	background-color: #444444;
	border: 1px solid black;
	width: 90px;
	height: 50px;
}

#PlayerName
{
	color: white;
	font-size: 15px;
	text-align: center;
	horizontal-align: center;
	vertical-align: center;
	width: 100%;
	text-overflow: clip;
}

.HeroSelectPlayerRoot.hero_highlighted #PlayerPortrait
{
	saturation: 0.0;
}

/* Mutations */

.DotaMutations {
	margin-top: 4px;
	margin-left: 0;
	padding-left: 10px;
	padding-top: 12px;
	font-size: 16px;
	color: #A3FDCC;
	height: 42px;
	width: 230px;
}

#Mutation0Label {
	background-image: url("file://panorama/images/custom_game/mutation/imba-bg.png");
	background-size: cover;
	color: #ccebff;
	text-shadow: 1px 0px 2px 2.0 #000000ca;
}

#Mutation1Label {
	background-image: url("file://panorama/images/custom_game/mutation/positive-bg.png");
	background-size: cover;
	color: #ecfef6;
	text-shadow: 1px 0px 2px 2.0 #000000ca;
}

#Mutation2Label {
	background-image: url("file://panorama/images/custom_game/mutation/negative-bg.png");
	background-size: cover;
	color: #ffe9eb;
	text-shadow: 1px 0px 2px 2.0 #000000ca;
}

#Mutation3Label {
	background-image: url("file://panorama/images/custom_game/mutation/terrain-bg.png");
	background-size: cover;
	color: #ede5da;
	text-shadow: 1px 0px 2px 2.0 #000000ca;
}

